--- a/src/DeskPlugin/Desk/Dictionaries/ButtonStylesDictionary.xaml
+++ b/src/DeskPlugin/Desk/Dictionaries/ButtonStylesDictionary.xaml
@@ -13,7 +13,8 @@
                         Margin="2" 
                         SnapsToDevicePixels="true"
                         StrokeDashArray="1 2" 
-                        Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" 
+                        Stroke="{DynamicResource {x:Static 
+                            SystemColors.ControlTextBrushKey}}" 
                         StrokeThickness="1"/>
                 </ControlTemplate>
             </Setter.Value>
@@ -43,13 +44,14 @@
                 </LinearGradientBrush>
             </Setter.Value>
         </Setter>
-        <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource 
+            Button.Static.Border}"/>
         <Setter Property="Foreground" Value="{DynamicResource {x:Static 
             SystemColors.ControlTextBrushKey}}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="20,10,20,5"/>
+        <Setter Property="Margin" Value="5,10,5,0"/>
         <Setter Property="Padding" Value="15,5"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -64,11 +66,14 @@
                         <ContentPresenter 
                             x:Name="contentPresenter" 
                             Focusable="False" 
-                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                            HorizontalAlignment="{TemplateBinding 
+                                HorizontalContentAlignment}" 
                             Margin="{TemplateBinding Padding}" 
                             RecognizesAccessKey="True" 
-                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
-                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                            SnapsToDevicePixels="{TemplateBinding 
+                                SnapsToDevicePixels}" 
+                            VerticalAlignment="{TemplateBinding 
+                                VerticalContentAlignment}"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsDefaulted" Value="true">
@@ -79,21 +84,27 @@
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter Property="Background" TargetName="border" 
-                                    Value="{StaticResource Button.MouseOver.Background}"/>
+                                    Value="{StaticResource 
+                                        Button.MouseOver.Background}"/>
                             <Setter Property="BorderBrush" TargetName="border" 
-                                    Value="{StaticResource Button.MouseOver.Border}"/>
+                                    Value="{StaticResource 
+                                        Button.MouseOver.Border}"/>
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
                             <Setter Property="Background" TargetName="border" 
-                                    Value="{StaticResource Button.Pressed.Background}"/>
+                                    Value="{StaticResource 
+                                        Button.Pressed.Background}"/>
                             <Setter Property="BorderBrush" TargetName="border" 
-                                    Value="{StaticResource Button.Pressed.Border}"/>
+                                    Value="{StaticResource 
+                                        Button.Pressed.Border}"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Background" TargetName="border" Value="#FFFFFF"/>
-                            <Setter Property="BorderBrush" TargetName="border" Value="#777777"/>
-                            <Setter Property="TextElement.Foreground" TargetName="contentPresenter" 
-                                    Value="#000000"/>
+                            <Setter Property="Background" TargetName="border" 
+                                    Value="#FFFFFF"/>
+                            <Setter Property="BorderBrush" TargetName="border" 
+                                    Value="#777777"/>
+                            <Setter Property="TextElement.Foreground" 
+                                    TargetName="contentPresenter" Value="#000000"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -101,14 +112,15 @@
         </Setter>
     </Style>
 
-    <Style x:Key="BuildModelButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource 
-        {x:Type Button}}">
+    <Style x:Key="BuildModelButtonStyle" TargetType="{x:Type Button}" 
+           BasedOn="{StaticResource {x:Type Button}}">
         <Setter Property="Margin" Value="0,5,0,0"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="FontWeight" Value="SemiBold"/>
         <Setter Property="Foreground" Value="#FFFFFF"/>
-        <Setter Property="Background" Value="{StaticResource GrayLinearGradientBrush}"/>
+        <Setter Property="Background" Value="{StaticResource 
+            GrayLinearGradientBrush}"/>
     </Style>
 
 </ResourceDictionary>
