--- a/src/DeskPlugin/Desk/Dictionaries/GroupBoxStyleDictionary.xaml
+++ b/src/DeskPlugin/Desk/Dictionaries/GroupBoxStyleDictionary.xaml
@@ -6,9 +6,10 @@
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="{x:Type GroupBox}">
-        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Margin" Value="5,5,5,0"/>
         <Setter Property="Padding" Value="0,0,0,10"/>
-        <Setter Property="BorderBrush" Value="{StaticResource GraySolidColorBrush}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource 
+            GraySolidColorBrush}"/>
         <Setter Property="HeaderTemplate">
             <Setter.Value>
                 <DataTemplate>
