--- a/src/DeskPlugin/Desk/Views/UserControls/ParameterControl.xaml
+++ b/src/DeskPlugin/Desk/Views/UserControls/ParameterControl.xaml
@@ -12,40 +12,45 @@
     Width="160"
     Height="60"
     FontSize="12"
-    mc:Ignorable="d">
-
+    mc:Ignorable="d"
+    Validation.ErrorTemplate="{x:Null}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../../Dictionaries/TextBoxStylesDictionary.xaml"/>
+                <ResourceDictionary 
+                    Source="../../Dictionaries/TextBoxStylesDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-
-        <TextBlock Grid.Row="0" Margin="5,10,0,5" Width="Auto" HorizontalAlignment="Left" 
-                   Text="{Binding Description, Mode=OneWay}" Background="Transparent"/>
-
+        <TextBlock 
+            Grid.Row="0" 
+            Margin="5,10,0,5" 
+            Width="Auto" 
+            HorizontalAlignment="Left" 
+            Text="{Binding Description, Mode=OneWay}" 
+            Background="Transparent"/>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="1.5*"/>
             </Grid.ColumnDefinitions>
-
-            <TextBox x:Name="ParameterValueTextBox" Grid.Column="0" Style="{StaticResource 
-                ValueTextBoxStyle}">
+            <TextBox x:Name="ParameterValueTextBox" Grid.Column="0" 
+                     Style="{StaticResource ValueTextBoxStyle}">
                 <b:Interaction.Behaviors>
                     <behaviors:ProhibitNotNumbersBehavior/>
                 </b:Interaction.Behaviors>
                 <TextBox.Text>
-                    <Binding Path="Value" Mode="TwoWay" NotifyOnValidationError="True" 
-                             ValidatesOnNotifyDataErrors="True" 
-                             UpdateSourceTrigger="PropertyChanged">
+                    <Binding 
+                        Path="Value" 
+                        Mode="TwoWay" 
+                        NotifyOnValidationError="True" 
+                        ValidatesOnNotifyDataErrors="True" 
+                        UpdateSourceTrigger="PropertyChanged">
                         <Binding.ValidationRules>
                             <validationRules:NullOrWhiteSpaceValidationRule 
                                 ValidatesOnTargetUpdated="True"/>
@@ -53,12 +58,14 @@
                     </Binding>
                 </TextBox.Text>
             </TextBox>
-
-            <TextBlock Grid.Column="1" Margin="10,6,5,0" Height="14" VerticalAlignment="Top" 
-                       Foreground="#676767" Background="Transparent" Text="{Binding 
-                AcceptableRange, Mode=OneWay}"/>
+            <TextBlock 
+                Grid.Column="1" 
+                Margin="10,6,5,0" 
+                Height="14" 
+                VerticalAlignment="Top" 
+                Foreground="#676767" 
+                Background="Transparent" 
+                Text="{Binding AcceptableRange, Mode=OneWay}"/>
         </Grid>
-
     </Grid>
-
 </UserControl>
